# fastapi-demo

./: .gitignore  database.py  main.py  models.py  pyproject.toml  schemas.py  service.py
src/: api.py  cli.py  config.py  database.py  enums.py  exceptions.py  exeption_handlers.py  main.py  schemas.py  service.py
src/admin/: schemas.py
src/admin/dashboard/: router.py  service.py
src/admin/order/: router.py  service.py
src/admin/user/: router.py  service.py
src/auth/: dependencies.py  router.py  schemas.py  service.py
src/cart/: cart_session.py  dependencies.py  router.py  schemas.py  service.py
src/category/: router.py  schemas.py  service.py
src/common/: image.py  jwt.py  models.py  pagination.py  password.py  schemas.py
src/item/: endpoints.py  schemas.py  service.py
src/models/: __init__.py  cart.py  category.py  item.py  order.py  product.py  user.py
src/order/: router.py  schemas.py  service.py
src/product/: endpoints.py  router.py  schemas.py  service.py
src/user/: router.py  schemas.py  service.py
