[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.2",
    "sqlalchemy>=2.0.48",
]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.pyright]
include = ["."]
extraPaths = ["."]
